--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-  <a 
+  <a href="https://data.whicdn.com/images/349802697/original.png"
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
