--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
   <a href="https://weheartit.com/">WeHeartIt</a>
-  <a href="/articles">Articles</a>
+  <a href="weheartit.com/articles">Articles</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
