--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-  <a href="https://weheartit.com/">WeHeartIt</a>
-  <a href="/entry/349802697">Articles</a>
+  <a href="https://google.com/">Google</a>
+  <a href="about.html">About Page</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
