--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   Absolute Path (external link)
   <a href="https://google.com/">Google</a>
   <a href="about.html">About Page</a>
+  <a href=""
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
