--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   Absolute Path (external link)
   <a href="https://google.com/">Google</a>
   <a href="about.html">About Page</a>
-  <a href=""
+  <a href="https://google.com" target = "_blank">Google</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
